--- a/plugin.video.Catoal/changelog.txt
+++ b/plugin.video.Catoal/changelog.txt
@@ -1,4 +1,4 @@
-Versión 2.0
+﻿Versión 2.0
 Primera version del plugin Catoal. Todas las listas incluidas son propiedad de sus creadores,Catoal no se hace responsable de su contenido.
 
 Versión 3.0
@@ -15,3 +15,9 @@ Basado en el liveStreamsPro 1.9.3 de Shani
 
 Versión 5.2
 Añadido Control Parental
+
+Versión 5.2.1
+Varios ajustes
+
+Versión 5.2.2
+Ignorar error en creacion de listas
