--- a/plugin.video.Catoal/changelog.txt
+++ b/plugin.video.Catoal/changelog.txt
@@ -1,4 +1,7 @@
-﻿Version 5.2.8
+﻿Version 5.2.9 
+Rectificación de AADecoder
+
+Version 5.2.8
 Mejorada las funciones básicas y recopilación de códigos para su visionado.
 
 Version 5.2.7
