--- a/plugin.video.Catoal/changelog.txt
+++ b/plugin.video.Catoal/changelog.txt
@@ -1,4 +1,7 @@
-﻿Versión 5.3.1
+﻿Versión 5.3.2
+Actualización de codes.
+
+Versión 5.3.1
 Añadido livestreams script addons
 Juegos de comandos
 Soporte para cifrado XML / M3U8
